--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webkitSpeechRecognition</title>
+    <meta name="description" content="Experimenting with speech recognition">
 </head>
 <body>
     <h1>webkitSpeechRecognition</h1>
